k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: honcho
  labels:
    app.kubernetes.io/name: honcho
    app.kubernetes.io/part-of: honcho
