k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: honcho-ui-ingress
  namespace: honcho
  labels:
    app: honcho-ui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ui.honcho.bouba.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: honcho-ui-svc
                port:
                  number: 3000
  tls:
    - hosts:
        - ui.honcho.bouba.ar
      secretName: ui-honcho-tls
